# RoboForger

./: .gitignore  Justfile  LICENSE  README.md  RoboForger.spec  build_installer.py  build_nuitka.py  example_code.py  generate_resources.py  main.py  main.spec  pyproject.toml  pysidedeploy.spec  qtquickcontrols2.conf  requirements.txt  resources.qrc  roboforger.drawio  run.bash  setup_roboforger.iss  thx2.md
.github/workflows/: main.yml
RoboForger/: __init__.py  fig_types.py  forger.py  main.py  roboforger.py  types.py  utils.py
RoboForger/app/: application.py  config.py  configuration.py  console.py  mainwindow.py  preview.py  utils.py  worker.py
RoboForger/detector/: detector.py  dfs.py  enums.py  tracer.py  traces.py
RoboForger/drawing/: draw.py
RoboForger/file2forger/: cad_parser.py  converter.py  forger.py
RoboForger/forger/: cad_parser.py  converter.py  draw.py  forger.py
RoboForger/preprocessing/: cad_parser.py  converter.py
RoboForger/resources/: default_config.json
data/: qtquickcontrols2.conf
docs/: aboutinstructions.md  curvature.md
i18n/: es_US.ts
models/: arc_model.py  circle_model.py  line_model.py
qml/: App.qml  Main.qml
qml/Components/: AppWindow.qml  LabeledInput.qml  MonoColorSVG.qml  NumberLabeledInput.qml  SaveFileDialog.qml  (+4 more)
roboforger_app/: application.py  generated_resources.py  startup.py
test_files/: SegundoEjercicio2.dwg
tests/: bspline_test.py  graph_plot.py  spline_test.py
ui/: arc_geometry.py  circle_geometry.py  line_geometry.py
viewmodels/: app_vm.py  console_logger.py  dxf_worker.py  file_dialog.py
(+95 files in other folders)
