[project]
name = "roboforger"
version = "2.0.0"
description = ""
authors = [
    {name = "Juan Sobalvarro",email = "sobalvarrog.juans@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyside6 (>=6.10.1,<7.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "ezdxf (>=1.4.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "nuitka (>=2.8.10,<3.0.0)",
]
